; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_gui_mch_set_bg_color.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_gui_mac.c_gui_mch_set_bg_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gui_mch_set_bg_color(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @Red(i32 %4)
  %6 = mul nsw i32 %5, 257
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @Green(i32 %8)
  %10 = mul nsw i32 %9, 257
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @Blue(i32 %12)
  %14 = mul nsw i32 %13, 257
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 2
  store i32 %14, i32* %15, align 4
  %16 = call i32 @RGBBackColor(%struct.TYPE_3__* %3)
  ret void
}

declare dso_local i32 @Red(i32) #1

declare dso_local i32 @Green(i32) #1

declare dso_local i32 @Blue(i32) #1

declare dso_local i32 @RGBBackColor(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
